# coro-cpp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  sonar-project.properties  vcpkg-configuration.json
.github/actions/install-dependencies/: action.yml
.github/workflows/: apidocs.yml  ci-vcpkg.yml  ci.yml  clang-tidy.yml  codeql.yml  ctest.yml  lint.yml  sonarcloud.yml  update-vcpkg-baseline.yml
ci/: coverage.ctest.cmake  valgrind.ctest.cmake
cmake/: Doxyfile.in  extra.css  wwa-coro-config.cmake
examples/: .clang-tidy  CMakeLists.txt  advance_with_begin.cpp  async_generator.cpp  eager_task.cpp  generator.cpp  generator_iterator.cpp  run_awaitable.cpp  sync_generator_adapter.cpp  task.cpp
src/: CMakeLists.txt  async_generator.h  detail.h  eager_task.h  exceptions.h  generator.h  sync_generator_adapter.h  task.h
test/: .clang-tidy  CMakeLists.txt  async_generator.cpp  eager_task.cpp  generator.cpp  sync_generator_adapter.cpp  task.cpp
